kbase-extension/static/kbase/css/kbaseNarrative.css
/* ... */
.dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}

/** End Bootstrap 3 submenu fix **/


/* Fixes to bring toolbars up to Bootstrap 3 */
#maintoolbar {
    position: relative;
    top: 5px;
    min-height: 0;
    border: none !important;
    background-image: none !important;
    background-color: #f9f9f9 !important;
    -webkit-box-shadow: none;
    box-shadow: none;
}

#maintoolbar-container {
    margin-left: 10px;
}

#menubar {
    position: absolute;
    width: 100%;
    top: 3px;
    background-color: #f9f9f9;
    border-bottom: 2px solid #ddd;
    padding-bottom: 5px;
}

#menubar .navbar {
    margin-bottom: 5px;
}

#menubar .navbar .container {
    padding-left: 0;
    padding-right: 0;
}

/* some more bootstrap hacks */
.navbar {
    min-height: 0;
    background-image: none;
    background-color: #f8f8f8;
}

#menubar .navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 7px;
}

.btn-default, .btn-primary, .btn-success, .btn-info, .btn-warning, .btn-danger {
    background-image: none;
}

.panel-default>.panel-heading {
    background-image: none;
}

.btn-default {
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
}

#menus {
    padding-left: 0px;
}

#menubar .navbar  {
    width: 100%;
}

div#notebook_panel {
    -webkit-box-shadow: none; /*0 -1px 0px rgba(0, 0, 0, 0.1);*/
    -moz-box-shadow: none; /*0 -1px 0px rgba(0, 0, 0, 0.1); */
    box-shadow: none; /* 0 -1px 0px rgba(0, 0, 0, 0.1); */
}

/*#notebook {
    padding-top: 1em;
}
*/
.version-stamp a {
    padding-right: 320px;
    text-align: right;
    color: #0088CC !important;
}

.creator-stamp {
    padding-right: 320px;
    height: 1em;
    text-align: right;
    color: #006698;
    font-size: 120%;
    line-height: 1em;
    font-family: "OxygenBold", Arial, sans-serif;
}

.panel {
    margin-bottom: 0px;
}

#kb-jobs-panel {
    margin-bottom: 5px;
}

.kb-narr-side-panel {
    margin-bottom: 5px;
}

.kb-narr-side-panel .kb-title {
    padding: 10px 5px;
    font-size: 14pt;
    font-family: "OxygenBold", Arial, sans-serif;
    text-transform: uppercase;
    color: #2e618d;
    /*border-bottom: 1px solid #CECECE;*/
}

/* From user and job state service */

.kbujs-table-container {
    height: auto;
}

.kbujs-timestamp {
    color: #0066b9;
    cursor: pointer;
}

.kbujs-error-cell {
    color: #c7254e;
    font-weight: bold;
}

.kbujs-error:hover {
    cursor: pointer;
}

.kbujs-loading-modal {
    text-align: center;
    font-size: 16px;
    font-weight: bold;
}

.kbujs-refresh-btn {
    position: absolute;
    right: 5px;
}

.kbujs-jobs-table {
    margin-left: auto !important;
    margin-right: auto !important;
}

.kbujs-loading {
    height: 100%
    vertical-align: middle;
    text-align: center
}

.kbujs-delete-job {
    cursor: pointer;
}

.kbujs-error-traceback {
    white-space : nowrap;
    float : left;
    max-width : 516px;
    max-height: 250px;
    overflow-x : scroll;
    overflow-y: scroll;
}

/* For connecting lines */
.kb-line {
    background-color: lightgrey;
    position: absolute;
}



/* tab.js */

.nav-tabs .glyphicon-remove {
    margin: 0 0 0 3px;
    color: #aaa;
}
.nav-tabs .glyphicon-remove:hover {
    color: #666;
    cursor: hand;
    cursor: pointer;
}

/**
 ** Formerly in kbaseNarrFuncResults.css
 **/

/* CSS for various narrative function results.
 * This is just a hacky, dummy place to dump css for different
 * result widgets. Something better will come along, once we burn
 * this down...
 */

/* Somehow a bunch of classes from jQuery.dataTables aren't getting added.
 * Putting them here in the hopes they don't clobber anything else, the way
 * the rest of dataTables might...
 */
.paging_full_numbers {
    height: 22px;
    line-height: 22px;
}
.paging_full_numbers a:active {
    outline: none
}
.paging_full_numbers a:hover {
    text-decoration: none;
}

.paging_full_numbers a.paginate_button,
.paging_full_numbers a.paginate_active {
    border: 1px solid #aaa;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 2px 5px;
    margin: 0 3px;
    cursor: pointer;
    *cursor: hand;
    color: #333 !important;
}

.paging_full_numbers a.paginate_button {
    background-color: #ddd;
}

.paging_full_numbers a.paginate_button:hover {
    background-color: #ccc;
    text-decoration: none !important;
}

.paging_full_numbers a.paginate_active {
    background-color: #99B3FF;
}

/** End kbaseNarrFuncResults.css **/

/*****************************************************************************
 ** Formerly in kbaseNarrFunc.css
 *****************************************************************************/
/*
 * Styles for KBase Narrative notebook page, function panel
 */
 /* Header for panel */
 .kb-function-header {
    padding: 10px 0;
    color: #0064b6;
    font-weight: bold;
    background-color: #b6e9f8;
    text-align: center;
    margin-bottom: 3px;
}

.kb-narr-panel-body {
    padding: 3px;
    overflow-y: auto;
}

.kb-narr-panel-toggle {
    margin-right: 4px;
    margin-top: -4px;
    cursor: pointer;
    color: #888;
    -webkit-user-select: none; /* Chrome/Safari */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* IE10+ */
}

/* Container for func list */
.kb-function-body {
    height: 45%;
    max-height:45%;
    overflow-y: auto;
    width: 100%;
}

.kb-function-body .accordion .panel .panel-body {
    padding: 0px;
    padding-left: 5px;
}

.kb-function-body ul {
    border: 1px solid #dddddd;
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 100%;
}
.kb-function-body li {
    padding: 5px 5px;
    width: 100%;
    text-align: left;
}

/* alt. rows */
.kb-function-body li:nth-child(odd) {
    background-color: #eee;
    border-bottom: 1px solid #ddd;
}
/* ... */

